--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,5 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,17 +8,28 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin: 0;
+  padding: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+.layout {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  text-align: left;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.orange {
+  color: orange;
+}
+
+.purple {
+  color: purple;
+}
+
+.rate-container{
+ border-top: 2px solid purple;
+}
+.rate-container span.fa{
+    font-size: 2em;
+    cursor: pointer;
 }
