--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   text-align: left;
+  grid-gap: 20px;
 }
 
 .orange {
@@ -32,4 +33,13 @@
 .rate-container span.fa{
     font-size: 2em;
     cursor: pointer;
+}
+
+.movie-item{
+  display: grid;
+  grid-template-columns: 1fr auto auto;
+}
+.movie-item span{
+  font-size: 1.0em;
+  margin: 16px 5px;
 }
