--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,7 @@
 .App {
   text-align: center;
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  min-height: calc(100vh - 100px);
   color: white;
   margin: 0;
   padding: 50px;
@@ -39,7 +34,64 @@
   display: grid;
   grid-template-columns: 1fr auto auto;
 }
+
+.movie-item:hover {
+  color: rgb(166, 215, 248);
+}
+
 .movie-item span{
   font-size: 1.0em;
   margin: 16px 5px;
+}
+
+button {
+  color: #444444;
+  background-color: #f3f3f3;
+  padding: 5px 10px;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 0.8em;
+  outline: none;
+}
+
+button:disabled {
+  color: #f3f3f3;
+  background-color: #444444;
+  cursor: not-allowed;
+}
+
+input, textarea{
+  width: 100%;
+  padding: 10px;
+  margin: 8px 0px;
+  font-size: 0.8em;
+}
+
+h2 {
+  margin: 0;
+  font-size: 2em;
+
+}
+
+.fa-trash{
+  color: crimson;
+}
+.fa-edit{
+  color: #5eac57;
+}
+
+h1{
+  color: orange;
+  font-size: 3em;
+}
+
+h1 span.fa{
+  color: white;
+  transform: rotate(30deg);
+}
+
+.loging-container {
+  width: 50%;
+  margin:  50px 25%;
+  
 }
